feat: add Forge module for 1.12.2 (ForgeGradle 5.1 + Forge 14.23.5.2860)
Legacy Forge API: @Mod.EventHandler, TextComponentString, SubscribeEvent
Java 8 target, Gradle 7.6.4 wrapper, SLF4J bridge for common module